--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -6,30 +6,24 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
   {
-    title: "Features",
+    title: "Projects",
     path: "#",
     children: [
-      { title: "Action", path: "/" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
-      { title: "404 Page", path: "/404" },
+      { title: "Web Development", path: "#dev" },
+      { title: "Web Design", path: "#des" },
     ],
   },
   {
-    title: "Pricing",
-    path: "/pricing",
-  },
-  {
     title: "About",
-    path: "/about",
+    path: "#about",
   },
   {
-    title: "Blog",
-    path: "/blog",
+    title: "Experience",
+    path: "#experience",
   },
   {
     title: "Contact",
-    path: "/contact",
+    path: "#contact",
   },
 ];
 ---
@@ -39,16 +33,14 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
-          >
+          ><span class="font-syne font-bold text-slate-800">Isaac Graveley</span>
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
         </div>
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="flex flex-col lg:flex-row lg:gap-3">
+        <ul class="font-inter flex flex-col lg:flex-row lg:gap-3">
           {
             menuitems.map((item, index) => (
               <>
@@ -73,16 +65,14 @@ const menuitems = [
             ))
           }
         </ul>
-        <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
+        <div class="lg:hidden flex items-center  mt-3 gap-4">
+          <Link href="#contact" class="font-syne" size="md" block>Contact Me</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <Link class="font-syne" href="#contact" size="md">Contact Me</Link>
       </div>
     </div>
   </header>
