--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -10,7 +10,7 @@ import { Icon } from "astro-icon";
   <div>
     <h1
       class="font-inter text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Front-end developer and designer based in Ottawa, Ontario
+      Full-Stack Developer based in Ottawa, Ontario
     </h1>
     <p class="text-lg font-sans text-center place-items-center mt-4 text-slate-600">
       Currently building web pages in the utilities industry.
