changed hero and about section

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -4,9 +4,9 @@
     About Me
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    I'm a web developer based in Ottawa, Ontario. Experienced in many areas of digital media, from website design and development, to creating video ads and managing paid digital advertising campaigns. I'm passionate about delivering websites with top performance and great user experiences.
+    Isaac Graveley is a full-stack developer based in Ottawa, Ontario. Throughout his education and career, he has become experienced with multiple programming languages, libraries and tools. Isaac is a multi-disciplinary professional offering profound programming knowledge in tandem with a great understanding of design.
   </p>
-  <p class="text-lg mt-4 text-slate-600">I attended Humber College for 3 years to obtain my advanced diploma in Web Design & Interactive Media. During my time there I discovered my passion for web technologies, and got to work on plenty of exciting projects involving Web Development, Design, UI/UX mobile development and more.</p>
-  <p class="text-lg mt-4 text-slate-600">Now working in Ottawa, Ontario - I'm creating and optimizing web pages in the utilities and electrical infrastructure industry.</p>
-  <p class="text-lg mt-4 text-slate-600">On my downtime I love training and exploring with my dog Leaf, hanging out with friends and expanding my skillset through learning and occasional freelancing.</p>
+  <p class="text-lg mt-4 text-slate-600">
+    Passionate about technology, Isaac persued an Advanced Diploma in Web Design & Interactive Media from 2017 through 2020. This program helped him grasp an in-depth understanding of many areas of digital technology. Most importantly it allowed him to follow his passion of creating exciting projects using technology with a focus on user experience.
+  </p>
 </div>
