--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon";
       Full-Stack Developer based in Ottawa, Ontario
     </h1>
     <p class="text-lg font-sans text-center place-items-center mt-4 text-slate-600">
-      Currently building web pages in the utilities industry.
+      Currently exploring python and machine learning technology.
     </p>
     <div class="mt-6 justify-center flex flex-col sm:flex-row gap-3">
       <Link
