added 3 new projects, removed 1 project

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -4,9 +4,10 @@
     About Me
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Isaac Graveley is a full-stack developer based in Ottawa, Ontario. Throughout his education and career, he has become experienced with multiple programming languages, libraries and tools. Isaac is a multi-disciplinary professional offering profound programming knowledge in tandem with a great understanding of design.
+    Isaac Graveley is a web developer and digital marketer based in Ottawa, Ontario. Throughout his education and career, he has become experienced with multiple programming languages, libraries and tools. Isaac is a multi-disciplinary professional offering profound programming knowledge in tandem with a great understanding of design.
   </p>
   <p class="text-lg mt-4 text-slate-600">
     Passionate about technology, Isaac persued an Advanced Diploma in Web Design & Interactive Media from 2017 through 2020. This program helped him grasp an in-depth understanding of many areas of digital technology. Most importantly it allowed him to follow his passion of creating exciting projects using technology with a focus on user experience.
   </p>
+
 </div>
