--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -10,9 +10,9 @@ import { Icon } from "astro-icon";
   <div>
     <h1
       class="font-inter text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Full-Stack Developer based in Ottawa, Ontario
+      Web developer and Digital Marketer based in Ottawa, Ontario
     </h1>
-    <p class="text-lg font-sans text-center place-items-center mt-4 text-slate-600">
+    <p class="hidden text-lg font-sans text-center place-items-center mt-4 text-slate-600">
       Currently exploring python and machine learning technology.
     </p>
     <div class="mt-6 justify-center flex flex-col sm:flex-row gap-3">
