--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -8,15 +8,29 @@ const devProjects = [
     title: "Toronto Weather",
     description:
       "To explore more in-depth the significance of APIs, I built a weather web application using the Open Weather API, React and TailwindCSS. I enjoyed overcoming challenges related to filtering through API data and became much more comfortable doing so through this project.",
-      image: "/images/weather-main.png",
+      image: "/images/weather-toronto.png",
       link: 'https://weather-epe89dpgh-isaacgraveley.vercel.app/'
   },
   {
-    title: "Rise Fitness",
+    title: "Hydro Ottawa - MyAcccount Landing Page",
     description:
-      "The goal of this project was to test my design capabilities and developing modern components. I converted this project from Figma mockup to live deployment while using React, NextJS, TailwindCSS GitHub and Vercel.",
-      image: "/images/rise-main.png",
-      link: 'https://nextjs-woad-pi-12.vercel.app/',
+      "This project was developed in accordance to a design file given to me from an outside agency. The project was developed using HTML, CSS, and jQuery within a Drupal CMS.",
+      image: "/images/HOL-1.png",
+      link: 'https://hydroottawa.com/en/accounts-services/accounts/myaccount',
+  },
+  {
+    title: "Hydro Ottawa - Tips and Tools",
+    description:
+      "Taking responsibility of the design and development of this project, I completed a prototype within Adobe XD which was then developed using HTML, CSS using grids, and jQuery.",
+      image: "/images/HOL-2.png",
+      link: 'https://hydroottawa.com/en/save-energy/manage-usage/tips-tools',
+  },
+  {
+    title: "Hydro Ottawa - Save Energy For Business",
+    description:
+      "During this project I took charge of the design and layout of this page, as well as the development. The design was made in Adobe XD, and development was done in HTML, CSS using grids, and jQuery within a Drupal CMS.",
+      image: "/images/HOL-3.png",
+      link: 'https://hydroottawa.com/en/save-energy/save-energy-businesses/programs-and-incentives-businesses',
   },
 ];
 
